// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given a Button with Slottable with asChild should render a link with icon on the left/right 1`] = `
<div>
  <a
    href="https://radix-ui.com"
  >
    <span
      data-testid="left"
    >
      left
    </span>
    Click 
    <em>
      me
    </em>
    !
    <span
      data-testid="right"
    >
      right
    </span>
  </a>
</div>
`;

exports[`given a Button with Slottable without asChild should render a button with icon on the left/right 1`] = `
<div>
  <button>
    <span
      data-testid="left"
    >
      left
    </span>
    Click 
    <em>
      me
    </em>
    !
    <span
      data-testid="right"
    >
      right
    </span>
  </button>
</div>
`;
